# light_engine_characterization

./: .gitignore  light_engine_2024-05-31_19:23:49.733945.csv  light_engine_2024-05-31_19:34:43.169725.csv  pyproject.toml  switch_test.ipynb
Drivers/: Driver_DCA_Scope.py  Driver_LaserSource_71440108.py  Driver_Laser_Poet.py  Driver_OSA_MS9740B.py  Driver_PM_PM5020.py  Driver_TECSource_5240.py  Driver_TSL_Goumax.py  Driver_TSL_Quantifi.py
Measurement_scripts/: Characterize_Light_Engine.ipynb  Test_Quantifi_Laser.ipynb  WDM_Temeprature_Sweep.ipynb  Wavelength_Sweep_TSL_OSA.ipynb  Wavelength_Sweep_TSL_PM.ipynb  Zeus-I_EAM_Characterization.ipynb
archive/Drivers/: Pure_Photonics_Driver_FAU_Attach.ipynb
archive/Measurement_scripts/: Characterize_LE.ipynb  Characterize_Molex_LE.ipynb  Characterize_POET_LE.ipynb  Pure_Photonics_Laser.ipynb  Record_Power_LE_PM_TEC.ipynb  Record_Spectrum_LE_OSA_TEC.ipynb  Record_Spectrum_OSA.ipynb  Temperature_Sweep_TEC.ipynb
light_engine_characterization/: __main__.py  default_sequence  main_tfc.py  main_tfc_array.py
light_engine_characterization/instruments/agiltron/: __init__.py  optical_switch.py
light_engine_characterization/instruments/anritsu/: __init__.py  osa_ms9740b.py
light_engine_characterization/procedures/: __init__.py  molex_le_characterization.py  tfc_array_le_characterization.py  tfc_single_le_characterization.py
light_engine_characterization/tables/: __init__.py  correct_ch3_ch7.py  data_integrity.py  le_measurement.py  migrate_123456_ch567.py  remove_bad_meas.py  selective_delete.py
(+7 files in other folders)
